Print-Language-Top-Menu

--- a/Content/Other Exceptional Consignments/Handover to Ferry.htm
+++ b/Content/Other Exceptional Consignments/Handover to Ferry.htm
@@ -4,6 +4,9 @@
     </head>
     <body>
         <h1>Handover to Ferry</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>Indication whether the wagon may be used on ferries between Great Britain and Continental Europe</p>
+        <p>Maximum allowed angle of the ferry ramp (in grades: °) </p>
+        <p>No restrictions apply to two-axle wagons. Three-axle wagons must be able to negotiate the curves on board the ships </p>
+        <p>Wagons with two- or three-axle bogies are accepted  for unrestricted conveyance by ferry provided they are able to negotiate both the maximum ferry ramp angle and the on-board curves</p>
     </body>
 </html>
