--- a/Content/Out-of-Gauge Load/Combined Transport.htm
+++ b/Content/Out-of-Gauge Load/Combined Transport.htm
@@ -5,6 +5,50 @@
     </head>
     <body>
         <h1>Combined Transport</h1>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <p>Combined Transport in exceptional consignments constitutes a subcategory of out-of-gauge loads. In fact not all Combined Transports are out-of-gauge, though majority of intermodal loading units may require special provisions for transport because of the encroaching the loading gauge. Gauging such consignments may lead to various scenarios.</p>
+        <p>(Important) Both combined transport and intermodal transport involve the use of multiple transportation modes, and yet they are not synonymous.</p>
+        <p> Combined transport is also a subcategory of intermodal transport. It focuses strictly on the long-distance movement of goods where the major part of the journey is completed by rail, inland waterways, or sea, and any road movement is typically limited to the initial and final legs of the trip. This approach minimizes the reliance on road freight delivery, aiming to reduce road congestion and positive environmental impact. </p>
+        <p>Combined transport involves the conveyance of Intermodal Loading Units (ILUs). While in a freight train, some of the ILUs carried on dedicated wagons may exceed the loading gauge of the lines. To ensure the safe operation of combined transport trains without constraints, UIC in collaboration with UIRR introduced a codification system of lines, ILUs and wagons. The Infrastructure managers who offer codified lines with combined transport loading profiles,  also provide special operational provisions for railway undertakings which want to run combined transport trains on their rail networks. </p>
+        <h2>Understanding The Specifics Of Codification In Combined Transport</h2>
+        <p>Codification in Combined Transport refers to a system used for the identification and presentation of information about various elements involved in the transport process. The codification system is crucial for efficient operations, documents handling, involved elements control, and smooth communications during the transport process.</p>
+        <p> The carriage of a train with Combined Transport rules involves four elements:</p>
+        <ol>
+            <li>codified intermodal loading units (ILUs) with standard combined transport number for swap bodies, roller units, containers and semi-trailers.</li>
+            <li>codified special carrier wagons with Wagon Compatibility Code (WCC), or Wagon Correction Digit (WCD)</li>
+            <li>codified Paths of infrastructure manager with Combined Transport Profiles (CTP) of lines </li>
+            <li>Combined Transport trains.</li>
+        </ol>
+        <h2>Combined Transport Train</h2>
+        <p>Features of Combined Transport train:</p>
+        <ul>
+            <li>composed completely or partly of loaded freight wagons,</li>
+            <li>when loaded, carries intermodal loading unit(s) (e.g. swap bodies, semi-trailers, containers, roller units),</li>
+            <li>has  a fixed maximum CT profile number of the train,</li>
+            <li>runs on CT&#160;approved lines, which are subject to a special examination by infrastructure managers,</li>
+            <li>is subject to agreement with involved entities and railway undertakings.</li>
+        </ul>
+        <p>Comprehensive information on the standards and requirements for combined transport trains you may find in the <a href="https://uic.org/freight/load-safety/article/loading-guidelines" title="Link to UIC site" alt="Link to UIC Loading Guidelines">UIC Loading Guidelines</a>, volume 2, loading examples series 9.</p>
+        <h2>Gauging Specific check for Combined Transport</h2>
+        <p>Fixing Maximum Profile of Combined Transport Train includes :</p>
+        <p> on the one side Loaded freight wagon for combined transport</p>
+        <ul>
+            <li>the check of Combined Transport Code (CT code) which results from comparison of:</li>
+            <li>of the Technical Number of the ILU and,</li>
+            <li>and the loaded freight wagon with Compatibility Code (WCC) and Wagon Correction Digit (WCD) where necessary, </li>
+        </ul>
+        <p>on the other side Infrastructure:</p>
+        <ul>
+            <li>with Maximum allowed CT code on a line = Combined Transport Profile (CTP) of the line.</li>
+        </ul>
+        <p>Compatibility is demonstrated when: <br /> Combined Transport Code (CT code) is equal or smaller than Combined Transport Profile (CTP)<br /></p>
+        <p>image to be added.</p>
+        <h2>Possible Scenarios for Gauging Comparability Check for Combined Transport:  </h2>
+        <p>RU which intends to run a Combined Transport train shall  determine on what basis the handover and takeover of Combined Transport trains will take place. RU therefore determines which of the three  scenarios is applicable :</p>
+        <ol>
+            <li>Normal transport - when a Combined Transport train does not exceed the loading gauge of the all planned lines, and for which the Combined Transport code does not exceed codification of all lines for the train.</li>
+            <li>Transport with specific requirements - when a Combined Transport train exceeds the loading gauge, and the Combined Transport Code for the train does not exceed, or is equal to the code of the codified line. In such case the specific requirements hall be universally applicable to all trains in this category. Further authorisation process between the RU and the IM shall not take place because compliance transport specific requirements is sufficient to run Combined Transport Train.</li>
+            <li>Exceptional consignment transport (specific authorisation)&#160;- when a Combined Transport train exceeds the codification of the line, or the line is not codified. Infrastructure manager issues transport authorisation for the train based on an evaluation of the operational and technical feasibility. </li>
+        </ol>
+        <p>As a rule intermodal trains run on exceptional consignment transport authorisations, since this type of transport does not have an implemented codification frame. Thus, such transports are treated like any other conventional type of goods which while on the wagon encroach the loading gauge. The non-codified network managers in such cases in order to promote intermodal trains, may offers to railway undertakings reduced rates for the issue of permits with exceptional conditions of carriage. In addition the IMs may also simplify the procedure for acquisition of permanent special orders for out-of-gauge ILU&#160;consignments. Such solution is applied in Poland.</p>
     </body>
 </html>
