--- a/Content/Out-of-Gauge Load/Loading Gauge.htm
+++ b/Content/Out-of-Gauge Load/Loading Gauge.htm
@@ -5,13 +5,6 @@
     </head>
     <body>
         <h1>Loading Gauge</h1>
-        <p>Loading gauge is a concept of predefined dimensions of height and width of a wagon with cargo. <br /> is definded by the dimentions of height and width above the rail top which must not be aceeded by a rail vehicle or its load, so not to foul lineside fixtures or structured..</p>
-        <p>Information on loading gauges:</p>
-        <ul>
-            <li>and their static contours for most European countries can be found in UIC Loading Guidelines Volume 1</li>
-            <li>and access conditions referred to Exceptional Transports should be stated in the Network Statements.<br /></li>
-        </ul>
-        <p>&#160;</p>
-        <p>&#160;</p>
+        <p>Loading gauge is a concept of predefined dimensions of height and width of a wagon with cargo. <br /> is defined by the dimensions of height and width above the rail top which must not be exceeded by a rail vehicle or its load, so not to foul line side fixtures or structured.</p>
     </body>
 </html>
