--- a/Content/Out-of-Gauge Load/Out-of-Gauge Load.htm
+++ b/Content/Out-of-Gauge Load/Out-of-Gauge Load.htm
@@ -4,30 +4,49 @@
     </head>
     <body>
         <h1>Out-of-Gauge Load</h1>
-        <p>When wagon with goods exceeds the predefined dimensions of height and width of the loading gauge or a vehicle on own wheels exceeds the predefined vehicle's  profile, then railway undertaking sdeal with the gauge foul. A wagon with load or a vehicle is considered as exceeding the gauge if:</p>
+        <p>When wagon with goods exceeds the predefined dimensions of height and width of the loading gauge or a vehicle on own wheels exceeds the predefined vehicle's reference profile, then railway undertaking deals with the gauge fouling. </p>
+        <p>A wagon with cargo or a vehicle is considered as out-of-gauge when:</p>
         <ol>
-            <li>its contour due to its width or height, when positioned on a straight and level track, does not fall within the applicable gauge contour at least on the one section of the transport route under consideration,</li>
-            <li>on the straight and level track contour falls within the gauge, but after application of the loading width restrictions from UIC&#160;Loading Guidelines, Volume 1 and Tables 2<sub>1</sub>, 2<sub>3</sub> and 2<sub>5</sub> have not been complied with.</li>
+            <li>it's contour due to the width or height, while positioned on a straight and level track, does not fall within the applicable gauge contour at least on the one section of the transport route under consideration,</li>
+            <li>on the straight and level track contour falls within the gauge, but once UIC&#160;Loading&#160;Guidelines gauge restrictions of the loading width are applied it no longer complies with the loading gauge.</li>
         </ol>
-        <p> In such a case the transport of such a wagon and cargo set or a vehicle on own wheels might be still possible on the carriage conditions for an exceptional transport, on the route indicated and proved by an infrastructure manager.</p>
-        <p>Railway undertaking:</p>
+        <p>There are three basic zones where depending on:</p>
+        <ul>
+            <li> the consignment's width, and height from the level of the rail head,</li>
+            <li>and consignment's location on the wagon,</li>
+        </ul>
+        <p>where the consignment may the loading gauge.:</p>
+        <ol>
+            <li>bottom zone (specific height ranges are defined by infrastructure manager individually),</li>
+            <li>lateral zone (one-sided or two-sided)</li>
+            <li>upper zone (above the height of the loading gauge).</li>
+        </ol>
+        <p>A conditional zone of common lateral and upper exceeded gauge has been introduced in addition, to define the conditions for passing other consignments with exceeded gauge in the upper zone on double-track lines.</p>
+        <p>Exceeding the gauge on straight and level track depends only on the width and height of the load.</p>
+        <p>On curved track the overrun of the gauge is further influenced by:</p>
+        <ul>
+            <li>cargo length,</li>
+            <li>the geometrical characteristics of the wagon, </li>
+            <li>radius size in the curve,</li>
+            <li>cant size in a curve.</li>
+        </ul>
+        <p> In such a case the transport of such a wagon and cargo set, or a vehicle on own wheels might be still possible on the carriage conditions for an exceptional transport, on the route indicated and proved by an infrastructure manager.</p>
+        <p>For it to happen, a railway undertaking:</p>
         <ul>
             <li>determines the smallest loading gauge on the entire route from the departure station to the destination station,</li>
             <li>identifies critical points of the consignment,</li>
-            <li>suggest the preferred route</li>
-            <li>chooses approval method for the consignment</li>
-            <li>files an application form to the infrastructure manager for exceptional consignment.</li>
-            <li>or alternatively runs the consignment with combined transport conditions or with outline procedure.</li>
+            <li>applies width-restrictions from the tables in the UIC&#160;Loading Guidelines</li>
+            <li>states the critical points of the consignment,</li>
+            <li>declares accordingly loading tolerances and wagon deflection values,</li>
+            <li>suggest to infrastructure manager the consignor's preferred route,</li>
+            <li>applies one of the three approval methods for the oversized consignment:</li>
         </ul>
-        <p> Infrastructure manager approves the conditions with restrictions to run the consignmet and sends them to the railway undertaking.</p>
-        <p> In the extreme cases infrastructure manager might issue a refusal for the transport of the oversized consignment. In such a case the reason for issuing a refusal must be clearly declared by the infrastructure manager.</p>
-        <p>but it requires a permit for exceptional consignment which fouls the gauge. To apply for such permit find here guidance on the topic.</p>
-        <p>Loading Gauge</p>
-        <p>Combined Transport</p>
-        <p>Outline Procedure</p>
-        <p>Vehicle Gauge</p>
-        <p>Structure Gauge</p>
-        <p>Critical Points<br />Since not all cargo items are symmetrical, <br /></p>
-        <p>Remarks to Critical Points</p>
+        <ol>
+            <li>files an application form to the infrastructure manager for exceptional consignment,</li>
+            <li>or when applicable runs the consignment on combined transport conditions,</li>
+            <li>or if applicable applies the UIC&#160;outline procedure (currently only for Austria)</li>
+        </ol>
+        <p> Infrastructure manager inspects the lines conditions, approves consignment on the paths with a set of restrictive conditions regarding neighbour track occupancy, speed restrictions and prohibition to drive on specific tracks. These restrictions are sent to the railway undertaking in a permit with forwarding number and have limited period of validity.</p>
+        <p> In the extreme cases of gauge fouling infrastructure manager might issue a refusal for the transport of the oversized consignment. In such a case the reason for issuing a refusal must be clearly declared by the infrastructure manager.</p>
     </body>
 </html>
