--- a/Content/Out-of-Gauge Load/Structure Gauge.htm
+++ b/Content/Out-of-Gauge Load/Structure Gauge.htm
@@ -4,19 +4,6 @@
     </head>
     <body>
         <h1>Structure Gauge</h1>
-        <p>Static Method</p>
-        <p>For consignments exceeds the gauge, the possibility of its transport should be checked, taking into account, among other things: </p>
-        <ul>
-            <li>load distribution on the wagon, </li>
-            <li>critical points of the consignment (wagon and/or load), </li>
-            <li>lateral deviations of the longitudinal axis of the wagon </li>
-            <li>individual critical points of the consignment from the track axis in curves, </li>
-            <li>operational deviations resulting from the interaction of track and rolling stock. The basic radius of the curve is taken as R = 250 m.</li>
-        </ul>
-        <p>
-            <br />
-        </p>
-        <p>Kinematic Method</p>
-        <p>Dynamic Method.</p>
+        <p>In rail transport one of the most frequently asked questions is, as to what is the largest train (consisting of a vehicle, or a loaded wagon) that the considered railway network could accommodate? </p>
     </body>
 </html>
