--- a/Content/Out-of-Gauge Load/Critical Points.htm
+++ b/Content/Out-of-Gauge Load/Critical Points.htm
@@ -6,6 +6,71 @@
     <body>
         <h1>Critical Points</h1>
         <p>Wagon with payload or vehicle cross-sectional features that are likely to be of significance to  gauge check shall be identified as critical points. Critical points  are to be declared only where the loading gauges is fouled.<br /></p>
+        <p>If the payload has a complicated shape a sketch of the consignment in the three views should be attached showing al the critical points for the consignment and the position of the centre of gravity. </p>
+        <p>Critical points exceeding the international loading gauge that where measured without tolerance on the load are described by capital letters A, B, C … on the sketches.</p>
+        <p>The coordinates of the critical points of the load are determined by taking measurements on both sides of the wagon while the wagon is stationary on straight and level track.</p>
+        <p>Basic parameters of X-shaped consignments include:</p>
+        <p>1) height - vertically from the top surface of the rail head, separately for each inflection point of the load contour;</p>
+        <p>2) width - horizontally from the longitudinal axis of the wagon to the edge of the load at each inflection point of its contour. </p>
+        <p>image<br /></p>
+        <p>For more complicated contours </p>
+        <p>For symmetrical contours points may be assigned on one half-width and copied to  the other. Critical Point Letters are assigned from the bottom to the top of the consignment.</p>
+        <p>For non-symmetrical contours points are assigned separately for the left and for the right side of the contour. Critical Point letters are assigned from the bottom left -half of the consignment to the top and the from the top to the bottom of the right-half. </p>
+        <p>image</p>
+        <p>In addition to height and width longitudinal dimensions also influence the gauge fouling, basically the longer the wagon, the narrower the wagon width.</p>
+        <p>&#160;</p>
+        <table style="width: 100%;">
+            <col />
+            <col />
+            <col />
+            <col />
+            <col />
+            <tbody>
+                <tr>
+                    <td>point's longitudinal<br />location
+</td>
+                    <td>Symbol in gauge calculations
+<br /> Value in Application
+</td>
+                    <td>wagon without bogies <br /></td>
+                    <td>wagons on bogies</td>
+                    <td>the lifting swivel benches <br />of a pair of wagons</td>
+                </tr>
+                <tr>
+                    <td>internal point</td>
+                    <td style="text-align: center;">ni
+</td>
+                    <td>
+                        <p>located between </p>
+                        <p>the outer (outermost) axles</p>
+                    </td>
+                    <td>between the pivots of the bogies
+</td>
+                    <td>of the carrier bridge, or between the pivots of the</td>
+                </tr>
+                <tr>
+                    <td>the midpoint</td>
+                    <td style="text-align: center;">ni max</td>
+                    <td>Half-way between
+the outer (outermost) axles
+</td>
+                    <td>Half way between the pivots of the bogies
+</td>
+                    <td>of the carrier bridge, or between the pivots of the</td>
+                </tr>
+                <tr>
+                    <td>outer point</td>
+                    <td style="text-align: center;">
+na
+</td>
+                    <td>beyond the outer axles</td>
+                    <td>
+beyond the bogie pivots
+</td>
+                    <td>of the carrier bridge, or between the pivots of the</td>
+                </tr>
+            </tbody>
+        </table>
         <p>&#160;</p>
     </body>
 </html>
