--- a/Content/Out-of-Gauge Load/Outline Procedure.htm
+++ b/Content/Out-of-Gauge Load/Outline Procedure.htm
@@ -4,6 +4,16 @@
     </head>
     <body>
         <h1>Outline Procedure</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>Outline procedure serves as a subcategory of non-codified exceptional consignments that encroach on the gauge. Two UIC documents: Leaflet UIC 502-2 and IRS 50502-1, currently set out the rules for out-of-gauge consignments which do not have the characteristics of any other type of exceptional consignment. </p>
+        <p>In order for the infrastructure manager to be able to offer this procedure to railway undertakings, he shall carry out a detailed inventory and recording of the structure gauge on the selected lines. Then, with the aid of the aforementioned UIC documents, IM shall establish the  permissible outlines of structure gauges for oversized consignments with the largest possible dimensions. These outlines shall take into account also the constituent  values like safety envelopes and other at IM's discretion, which will ensure the safe operation of trains with oversized consignments. Explaining thoroughly the rules for this subsystem is well beyond the scope of this project.</p>
+        <p> Currently the Outline Procedure is fully introduced and biding in Austria by ÖBB Infra. ÖBB Infra currently applies rules of UIC Leaflet 502-2, and is also ready to switch to new Outline Procedure rules set out in the IRS 50502-1. Railway undertakings running trains in Austria are obliged to apply ÖBB Profiles when consignment meets criteria laid out in respective ÖBB Profile, without need to especially contact Infrastructure Manager. An oversize consignment in the ÖBB Profile is declared for operation while ordering the schedule and by indicating the exact ÖBB Profile Number.</p>
+        <p>In Austria also Combined Transport trains run in ÖBB Profiles in accordance with the outline procedure for structure gauge. At ÖBB, the Combined Transport route profiles are summarised in 3 groups:</p>
+        <ul>
+            <li>ÖBB profile 170: valid up to P/C 45 or P/C 365</li>
+            <li>ÖBB profile 171: valid from P/C 46 to P/C 50 or P/C 366 to P/C 380</li>
+            <li>ÖBB profile 172: valid from P/C 51 to P/C 80 or P/C 381 to P/C 410</li>
+        </ul>
+        <p>When a consignment on ÖBB Infra network is unusual and unique, and no ÖBB Profile can be applied, then RU&#160;is obliged to apply to the infrastructure manger for a exceptional consignment authorisation in line with provisions laid out in the UIC&#160;IRS 50502. Such consignment receives AS Zahl (Infrastructure Managers permit number).</p>
+        <p>Some other infrastructure managers in Europe have  introduced path profiles for out-of-gauge loads, but their rules are biding internally on their networks and for now for an RU&#160;it is not possible to declare one. Due to huge amount of data which needs to be extracted and elaborated It takes years to codify the entire railway network. Explaining thoroughly this subsystem is beyond the scope of this project. However the basic principle is here explained. </p>
     </body>
 </html>
